--- a/templates/parts/gm-pc-summary.hbs
+++ b/templates/parts/gm-pc-summary.hbs
@@ -108,30 +108,30 @@
     </div>
     <div class="pc-summary-harm-container">
 
-      <div class="pc-summary-harm pc-harm-heavy {{#unless system.harm.heavy.one}} harm-inactive{{/unless}}">
+      <div class="pc-summary-harm pc-harm-severe {{#unless system.harm.severe.one}} harm-inactive{{/unless}}">
         <i class="fa-sharp fa-solid fa-crutches shadowed"></i>
-        <label class="harm-heavy shadowed">{{system.harm.heavy.one}}</label>
+        <label class="harm-severe shadowed">{{system.harm.severe.one}}</label>
       </div>
 
 
-      <div class="pc-summary-harm pc-harm-medium {{#unless system.harm.medium.one}} harm-inactive{{/unless}}">
+      <div class="pc-summary-harm pc-harm-moderate {{#unless system.harm.moderate.one}} harm-inactive{{/unless}}">
         <i class="fa-sharp fa-solid fa-crutch shadowed"></i>
-        <label class="harm-medium shadowed">{{system.harm.medium.one}}</label>
+        <label class="harm-moderate shadowed">{{system.harm.moderate.one}}</label>
       </div>
 
-      <div class="pc-summary-harm pc-harm-medium {{#unless system.harm.medium.two}} harm-inactive{{/unless}}">
+      <div class="pc-summary-harm pc-harm-moderate {{#unless system.harm.moderate.two}} harm-inactive{{/unless}}">
         <i class="fa-sharp fa-solid fa-crutch shadowed"></i>
-        <label class="harm-medium shadowed">{{system.harm.medium.two}}</label>
+        <label class="harm-moderate shadowed">{{system.harm.moderate.two}}</label>
       </div>
 
-      <div class="pc-summary-harm pc-harm-light {{#unless system.harm.light.one}} harm-inactive{{/unless}}">
+      <div class="pc-summary-harm pc-harm-lesser {{#unless system.harm.lesser.one}} harm-inactive{{/unless}}">
         <i class="fa-sharp fa-light fa-crutch fa-flip-horizontal"></i>
-        <label class="harm-light">{{system.harm.light.one}}</label>
+        <label class="harm-lesser">{{system.harm.lesser.one}}</label>
       </div>
 
-      <div class="pc-summary-harm pc-harm-light {{#unless system.harm.light.two}} harm-inactive{{/unless}}">
+      <div class="pc-summary-harm pc-harm-lesser {{#unless system.harm.lesser.two}} harm-inactive{{/unless}}">
         <i class="fa-sharp fa-light fa-crutch fa-flip-horizontal"></i>
-        <label class="harm-light">{{system.harm.light.two}}</label>
+        <label class="harm-lesser">{{system.harm.lesser.two}}</label>
       </div>
 
 
