--- a/scss/chat/_chat.scss
+++ b/scss/chat/_chat.scss
@@ -64,11 +64,54 @@
         color: var(--blades-gold);
       }
 
+      .dice-roll-strip {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        height: 30px;
+        width: 100%;
+        align-items: stretch;
+        justify-content: center;
+        gap: 10px;
+        margin: 5px 0;
+
+        .blades-die {
+          display: block;
+          height: 30px;
+
+          img {
+            height: 30px;
+            width: 30px;
+            display: block;
+          }
+
+          &.blades-die-critical {
+            outline: 2px solid var(--blades-gold-bright);
+
+          }
+          &.blades-die-success {
+            outline: 2px solid var(--blades-white-bright);
+          }
+          // &.blades-die-partial {
+
+          // }
+          // &.blades-die-fail {
+
+          // }
+          &.blades-die-ghost {
+            img { opacity: 0.5 }
+          }
+          &.blades-die-resistance {
+            outline: 2px solid var(--blades-blue-bright);
+          }
+        }
+      }
+
       .roll-outcome-container {
         justify-content: space-between;
         padding: 0 10px;
         align-items: center;
-        margin: 5px 0 10px 0;
+        margin: 5px 0 0 0;
 
         &.roll-result-critical {
           --background-color: var(--blades-gold-bright);
@@ -129,10 +172,14 @@
             &.roll-result-bottom-label {
               font-size: 14px;
               font-family: var(--font-emphasis-narrow);
+              font-weight: bold;
 
             }
             &.roll-result-main-label {
-
+              font-size: 32px;
+              line-height: 32px;
+              transform-origin: 50% 50%;
+              scale: 0.8 1;
             }
           }
         }
@@ -140,135 +187,76 @@
 
       }
 
-      // h2.chat-header.roll-position {
-      //   text-align: right;
-      //   font-family: var(--font-primary);
-
-      //   .position-text {
-      //     margin: 0 15px;
-      //     transform-origin: 50% 50%;
-      //     scale: 1.5;
-      //     display: inline-block;
-      //     font-family: var(--font-emphasis);
-
-      //     &.position-text-controlled {}
-      //     &.position-text-risky {}
-      //     &.position-text-desperate { }
-      //   }
-      // }
-
-      .dice-roll-strip {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        height: 30px;
-        width: 100%;
-        align-items: stretch;
-        justify-content: center;
-        gap: 10px;
-        margin: 5px 0;
-
-        .blades-die {
-          display: block;
-          height: 30px;
-
-          img {
-            height: 30px;
-            width: 30px;
-            display: block;
-          }
-
-          &.blades-die-critical {
-            outline: 2px solid var(--blades-gold-bright);
-
-          }
-          &.blades-die-success {
-            outline: 2px solid var(--blades-white-bright);
-          }
-          // &.blades-die-partial {
-
-          // }
-          // &.blades-die-fail {
-
-          // }
-          &.blades-die-ghost {
-            img { opacity: 0.5 }
-          }
-          &.blades-die-resistance {
-            outline: 2px solid var(--blades-blue-bright);
-          }
-        }
+      .consequence-container {
+        margin-top: 10px;
       }
     }
 
-    .dice-roll-strip {
-    }
+    // .chat-label, .chat-trait-label {
+    //   background-color: var(--blades-grey-bright);
+    //   font-family: var(--font-emphasis);
+    //   color: var(--blades-white);
+    //   font-size: 21px;
+    //   text-align: center;
+    //   padding: 0px 5px;
+    //   height: 30px;
+    //   text-transform: capitalize;
+    // }
+    // .chat-label-small {
+    //   background-color: var(--blades-grey);
+    //   color: var(--blades-black);
+    //   font-size: small;
+    //   text-align: center;
+    //   padding: 3px 5px;
+    //   height: 20px;
+    // }
 
-    .chat-label, .chat-trait-label {
-      background-color: var(--blades-grey-bright);
-      font-family: var(--font-emphasis);
-      color: var(--blades-white);
-      font-size: 21px;
-      text-align: center;
-      padding: 0px 5px;
-      height: 30px;
-      text-transform: capitalize;
-    }
-    .chat-label-small {
-      background-color: var(--blades-grey);
-      color: var(--blades-black);
-      font-size: small;
-      text-align: center;
-      padding: 3px 5px;
-      height: 20px;
-    }
+    // .label-stripe-chat {
+    //   text-transform: uppercase;
+    //   background-color: var(--blades-black);
+    //   color: var(--blades-white);
+    //   position: relative;
+    //   padding-top: 3px;
+    //   display: flex;
+    //   font-weight: bold;
+    //   margin: 0;
+    // }
 
-    .label-stripe-chat {
-      text-transform: uppercase;
-      background-color: var(--blades-black);
-      color: var(--blades-white);
-      position: relative;
-      padding-top: 3px;
-      display: flex;
-      font-weight: bold;
-      margin: 0;
-    }
-
-    .label-stripe-chat-small {
-      text-transform: capitalize;
-      background-color: var(--blades-grey);
-      color: var(--blades-black);
-      margin-bottom: 10px;
-      position: relative;
-      padding-top: 3px;
-      display: flex;
-      font-weight: bold;
-    }
+    // .label-stripe-chat-small {
+    //   text-transform: capitalize;
+    //   background-color: var(--blades-grey);
+    //   color: var(--blades-black);
+    //   margin-bottom: 10px;
+    //   position: relative;
+    //   padding-top: 3px;
+    //   display: flex;
+    //   font-weight: bold;
+    // }
 
 
-    .blades-die-tooltip {
-      .die {
-        font-weight: bold;
-        text-transform: capitalize;
-        font-size: large;
+    // .blades-die-tooltip {
+    //   .die {
+    //     font-weight: bold;
+    //     text-transform: capitalize;
+    //     font-size: large;
 
-        &.critical-success {
-          color: var(--blades-color-positive);
-        }
+    //     &.critical-success {
+    //       color: var(--blades-color-positive);
+    //     }
 
-        &.success {
-          color: var(--blades-white-bright);
-        }
+    //     &.success {
+    //       color: var(--blades-white-bright);
+    //     }
 
-        &.partial-success {
-          color: var(--blades-grey-bright);
-        }
+    //     &.partial-success {
+    //       color: var(--blades-grey-bright);
+    //     }
 
-        &.failure {
-          color: var(--blades-color-negative);
-        }
-      }
-    }
+    //     &.failure {
+    //       color: var(--blades-color-negative);
+    //     }
+    //   }
+    // }
 
 
   }
