--- a/templates/components/consequence.hbs
+++ b/templates/components/consequence.hbs
@@ -1,71 +1,99 @@
-<div class="comp consequence-display-container full-width"
-      data-user-id="{{userId}}"
-      data-roll-id="{{rollId}}"
+{{eLog "Consequence Context" this}}
+
+<div class="comp consequence-display-container full-width {{~#if isAccepted}}consequence-accepted{{/if}}"
+      data-user-id="{{flagData.rollUserID}}"
+      data-roll-id="{{flagData.rollID}}"
+      data-csq-id="{{id}}"
       data-csq-name="{{name}}"
       data-csq-type="{{type}}"
       data-resist-attribute="{{attribute}}"
-      data-resist-name="{{resistedTo.name}}"
-      data-resist-type="{{resistedTo.type}}" >
+      data-resist-name="{{resistTo.name}}"
+      data-resist-type="{{resistTo.type}}" >
 
-  {{#unless isMinimal}}
-  <img class="consequence-bg-image" src="systems/eunos-blades/assets/chat/csq-strip-long.png" />
+  {{#unless isAccepted}}
+    <img class="consequence-bg-image" src="systems/eunos-blades/assets/chat/csq-strip-long.png" />
+
+    <div class="consequence-interaction-pad accept-consequence-pad" data-action="accept-consequence"></div>
+    <div class="consequence-interaction-pad resist-consequence-pad" data-action="resist-consequence"></div>
+    {{#if armorTo}}
+      <div class="consequence-interaction-pad armor-consequence-pad" data-action="armor-consequence"></div>
+    {{/if}}
+    {{#if specialArmorTo}}
+      <div class="consequence-interaction-pad special-armor-consequence-pad" data-action="special-armor-consequence"></div>
+    {{/if}}
   {{/unless}}
 
-  <div class="consequence-interaction-pad accept-consequence-pad"></div>
-  <div class="consequence-interaction-pad resist-consequence-pad"></div>
-  {{#if specialArmorTo}}
-    <div class="consequence-interaction-pad special-armor-consequence-pad"></div>
-  {{/if}}
+
   <div class="consequence-icon-container">
     <div class="consequence-icon-circle base-consequence">
-      {{eLog "ICON DATA" icon}}
-      <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/base-{{icon}}.svg" />
+      <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/{{#if isAccepted}}accept{{else}}base{{/if}}-{{icon}}.svg" />
     </div>
-    <div class="consequence-icon-circle accept-consequence">
-      <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/accept-{{icon}}.svg" />
-    </div>
-    <div class="consequence-icon-circle resist-consequence">
-      {{#if resistedTo.icon}}
-      <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/resist-{{resistedTo.icon}}.svg" />
-      {{/if}}
-    </div>
-    {{#if specialArmorTo}}
-    <div class="consequence-icon-circle special-armor-consequence">
-      {{#if specialArmorTo.icon}}
-      <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/special-{{specialArmorTo.icon}}.svg" />
-      {{/if}}
-    </div>
-    {{/if}}
 
-    <div class="consequence-button-container consequence-resist-button-container resist-consequence">
-      <div class="consequence-button-bg consequence-resist-button-bg"></div>
-      <label class="consequence-button-label consequence-resist-button-label">RESIST</label>
-      {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-        blockClass="consequence-resist-button"
-        buttonClass="fa-solid fa-hand-fist"
-        action="resist-consequence"
-      }}
-    </div>
-    <div class="consequence-button-container consequence-accept-button-container accept-consequence">
-      <div class="consequence-button-bg consequence-accept-button-bg"></div>
-      {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-        blockClass="consequence-accept-button"
-        buttonClass="fa-solid fa-square-check"
-        action="accept-consequence"
-      }}
-      <label class="consequence-button-label consequence-accept-button-label">ACCEPT</label>
-    </div>
-    {{#if specialArmorTo}}
-    <div class="consequence-button-container consequence-special-armor-button-container special-armor-consequence">
-      <div class="consequence-button-bg consequence-special-armor-button-bg"></div>
-      <label class="consequence-button-label consequence-special-armor-button-label">SPECIAL</label>
-      {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-        blockClass="consequence-special-armor-button"
-        buttonClass="fa-duotone fa-shield-quartered"
-        action="special-armor-consequence"
-      }}
-    </div>
-    {{/if}}
+    {{#unless isAccepted}}
+      <div class="consequence-icon-circle accept-consequence">
+        <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/accept-{{icon}}.svg" />
+      </div>
+      <div class="consequence-icon-circle resist-consequence">
+        {{#if resistTo.icon}}
+        <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/resist-{{resistTo.icon}}.svg" />
+        {{/if}}
+      </div>
+      {{#if armorTo}}
+      <div class="consequence-icon-circle armor-consequence">
+        {{#if armorTo.icon}}
+        <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/base-{{armorTo.icon}}.svg" />
+        {{/if}}
+      </div>
+      {{/if}}
+      {{#if specialArmorTo}}
+      <div class="consequence-icon-circle special-armor-consequence">
+        {{#if specialArmorTo.icon}}
+        <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/special-{{specialArmorTo.icon}}.svg" />
+        {{/if}}
+      </div>
+      {{/if}}
+
+      <div class="consequence-button-container consequence-resist-button-container resist-consequence" data-csq-id="{{resistTo.id}}">
+        <div class="consequence-button-bg consequence-resist-button-bg"></div>
+        <label class="consequence-button-label consequence-resist-button-label">RESIST</label>
+        {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+          blockClass="consequence-resist-button"
+          buttonClass="fa-solid fa-hand-fist"
+          action="resistconsequence"
+        }}
+      </div>
+      <div class="consequence-button-container consequence-accept-button-container accept-consequence">
+        <div class="consequence-button-bg consequence-accept-button-bg"></div>
+        {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+          blockClass="consequence-accept-button"
+          buttonClass="fa-solid fa-square-check"
+          action="acceptconsequence"
+        }}
+        <label class="consequence-button-label consequence-accept-button-label">ACCEPT</label>
+      </div>
+      {{#if armorTo}}
+      <div class="consequence-button-container consequence-armor-button-container armor-consequence" data-csq-id="{{armorTo.id}}">
+        <div class="consequence-button-bg consequence-armor-button-bg"></div>
+        <label class="consequence-button-label consequence-armor-button-label">ARMOR</label>
+        {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+          blockClass="consequence-armor-button"
+          buttonClass="fa-duotone fa-shield-quartered"
+          action="armorconsequence"
+        }}
+      </div>
+      {{/if}}
+      {{#if specialArmorTo}}
+      <div class="consequence-button-container consequence-special-armor-button-container special-armor-consequence" data-csq-id="{{specialArmorTo.id}}">
+        <div class="consequence-button-bg consequence-special-armor-button-bg"></div>
+        <label class="consequence-button-label consequence-special-armor-button-label">SPECIAL</label>
+        {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+          blockClass="consequence-special-armor-button"
+          buttonClass="fa-duotone fa-shield-quartered"
+          action="specialarmorconsequence"
+        }}
+      </div>
+      {{/if}}
+    {{/unless}}
 
   </div>
 
@@ -73,30 +101,48 @@
 
     <label class="consequence-type base-consequence">{{typeDisplay}}</label>
 
+    {{#unless isAccepted}}
     <div class="consequence-type-bg accept-consequence"></div>
     <label class="consequence-type accept-consequence">{{typeDisplay}}</label>
 
-    {{#unless (test resistedTo.type "==" "None")}}
-    <label class="consequence-type resist-consequence">{{resistedTo.typeDisplay}}</label>
+    {{#unless (test resistTo.type "==" "None")}}
+    <label class="consequence-type resist-consequence">{{resistTo.typeDisplay}}</label>
     {{/unless}}
+
+    {{#if armorTo}}
+    {{#unless (test armorTo.type "==" "None")}}
+    <label class="consequence-type armor-consequence">{{armorTo.typeDisplay}}</label>
+    {{/unless}}
+    {{/if}}
 
     {{#if specialArmorTo}}
     {{#unless (test specialArmorTo.type "==" "None")}}
     <label class="consequence-type special-armor-consequence">{{specialArmorTo.typeDisplay}}</label>
     {{/unless}}
     {{/if}}
+    {{/unless}}
 
   </div>
 
   <div class="consequence-name-container">
 
     <label class="consequence-name base-consequence">{{name}}</label>
+
+    {{#unless isAccepted}}
     <label class="consequence-name accept-consequence">{{name}}</label>
 
-    {{#if (test resistedTo.type "==" "None")}}
+    {{#if (test resistTo.type "==" "None")}}
     <label class="consequence-name resist-consequence fully-negated">(Fully Negated!)</label>
     {{else}}
-    <label class="consequence-name resist-consequence">{{resistedTo.name}}</label>
+    <label class="consequence-name resist-consequence">{{resistTo.name}}</label>
+    {{/if}}
+
+    {{#if armorTo}}
+    {{#if (test armorTo.type "==" "None")}}
+    <label class="consequence-name armor-consequence fully-negated">(Fully Negated!)</label>
+    {{else}}
+    <label class="consequence-name armor-consequence">{{armorTo.name}}</label>
+    {{/if}}
     {{/if}}
 
     {{#if specialArmorTo}}
@@ -106,9 +152,11 @@
     <label class="consequence-name special-armor-consequence">{{specialArmorTo.name}}</label>
     {{/if}}
     {{/if}}
+    {{/unless}}
 
   </div>
 
+  {{#unless isAccepted}}
   <div class="consequence-footer-container">
     <div class="consequence-footer-bg resist-consequence"></div>
     <label class="consequence-footer-message consequence-resist-attribute flex-horizontal resist-consequence">
@@ -127,6 +175,7 @@
     {{/if}}
     {{/if}}
   </div>
+  {{/unless}}
 
 
 </div>
